@@ -383,6 +383,9 @@ t/50-schema-result-TagMetrics.t
 t/50-schema-result-AlignmentFilterMetrics.t
 t/50-schema-result-PulldownMetrics.t
 t/50-schema-result-SplitStats.t
+t/50-schema-result-MqcOutcomeDict.t
+t/50-schema-result-MqcOutcomeEnt.t
+t/50-schema-result-MqcOutcomeHist.t
 t/60-autoqc-autoqc.t
 t/60-autoqc-checks-adapter.t
 t/60-autoqc-checks-af_metrics.t
@@ -694,6 +697,7 @@ t/data/fastqcheck/5737/5737_7_t.fastqcheck
 t/data/fastqcheck/5737/5737_8.fastqcheck
 t/data/fixtures/000-analysis.yml
 t/data/fixtures/000-image_store.yml
+t/data/fixtures/000-mqc_outcome_dict.yml
 t/data/fixtures/000-run_tile.yml
 t/data/fixtures/100-analysis_lane.yml
 t/data/fixtures/100-cache_query.yml
