@@ -1,15 +1,12 @@
 use strict;
 use warnings;
-use Test::More tests => 6;
+use Test::More tests => 8;
 use Test::Exception;
-use Test::Deep;
-use JSON;
 use Moose::Meta::Class;
 use npg_testing::db;
 use DateTime;
 
-#Test model mapping
-use_ok('npg_qc::Schema::Result::MqcOutcomeHist', "Model check");
+use_ok('npg_qc::Schema::Result::MqcOutcomeHist');
 
 my $schema = Moose::Meta::Class->create_anon_class(
           roles => [qw/npg_testing::db/])
@@ -31,8 +28,6 @@ my $table = 'MqcOutcomeHist';
   my $rs = $schema->resultset($table)->search({});
   is ($rs->count, 1, q[one row created in the table]);  
 }
-
-$table = 'MqcOutcomeHist';
 
 #Test select
 {
@@ -57,11 +52,12 @@ $table = 'MqcOutcomeHist';
       'username'=>'user', 
       'last_modified'=>DateTime->now()};
 
-  my $object = $schema->resultset($table)->create($values); #Insert new entity
   my $rs = $schema->resultset($table);
-  $rs->find({'id_run'=>1, 'position'=>3})->update({'id_mqc_outcome'=>2}); #Find and update the outcome in the new outcome
-  $rs = $schema->resultset($table)->search({'id_run'=>1, 'position'=>3, 'id_mqc_outcome'=>2}); #Search the new outcome
-  is ($rs->count, 1, q[one row matches in the table after update]);  
+  lives_ok {$rs->create($values)} 'Insert new entity';
+  lives_ok {$rs->find({'id_run'=>1, 'position'=>3})->update({'id_mqc_outcome'=>2})}
+    'Find and update the outcome in the new entity';
+  is ($schema->resultset($table)->search({'id_run'=>1, 'position'=>3, 'id_mqc_outcome'=>2})->count,
+    1, q[one row matches in the table after update]);  
 }
 
 1;
