@@ -1,5 +1,12 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - in order to be able to retrieve values of foreigh keys without
+     fetching the row in the parent table, DBIx classes generated with
+     an option to drop id_ at the start of the relation name
+ - mqc models (DBIx) functionality extended to create a method for
+   updating/creating outcomes
+ - column name fixed in the mqc_outcome_hist table
+
 release 57.2
 
  - Added tables for manual qc.
